--- a/colab_nutribot_launcher.ipynb
+++ b/colab_nutribot_launcher.ipynb
@@ -8,6 +8,24 @@
       },
       "outputs": [],
       "source": [
+        "!git clone https://github.com/LavanyaGovindaraju/Nutri_ChatBot.git"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%cd /content/Nutri_ChatBot"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "!pip install -r requirements.txt"
       ]
     },
